--- a/android-client/res/values/strings.xml
+++ b/android-client/res/values/strings.xml
@@ -3,5 +3,12 @@
 
     <string name="hello">Hello World, MainActivity!</string>
     <string name="app_name">WebcamRoombaController</string>
+    <string name="quit">Quit</string>
+    <string name="left">Left</string>
+    <string name="right">Right</string>
+    <string name="up">Up</string>
+    <string name="down">Down</string>
+    <string name="pause">Pause Video</string>
+    <string name="stop">Stop</string>
 
 </resources>
